# RelayTokenMonitor

./: .gitignore  CONTINUE.md  README.md  package-lock.json  package.json
docs/superpowers/: progress.md
docs/superpowers/plans/: 2026-07-16-relay-logo.md  2026-07-16-relay-token-monitor.md
docs/superpowers/specs/: 2026-07-16-relay-logo-design.md  2026-07-16-relay-token-monitor-design.md  2026-07-17-current-token-usage-filter-design.md
scripts/: cargo-check.cmd  env.ps1  render-brand-icon.py  tauri-check.ps1  tauri-dev.ps1
src/: i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregate.rs  commands.rs  config.rs  lib.rs  relay.rs
